--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<h1>Clyde Bujari's Personal Page</h1>
+</head>
+<meta charset="UTF-8">
+<meta name="description" content="Personal github.io page for Clyde Bujari. Contains project, qualifications, resume info."
+<meta name="author" content="Clyde Bujari">
+<body>
+</body>
