--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
 </head>
 <body>
-	<h1>Clyde Bujari's Personal Page</h1>
 	<meta charset="UTF-8">
 	<meta name="description" content="Personal github.io page for Clyde Bujari. Contains project, qualifications, resume info."
 	<meta name="author" content="Clyde Bujari">
+
+	<h1>Clyde Bujari's Personal Page</h1>
+
+	<h2>Projects</h2>
+	<h2>Links</h2>
+	  <a href="https://c-bujari.github.io/resume.pdf">My Resume</a>
+		<a href="https://github.com/c-bujari">GitHub</a>
+		<a href="">LinkedIn</a>
+
 </body>
