Added basic header

--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
 </head>
 <body>
 	<meta charset="UTF-8">
-	<meta name="description" content="Personal github.io page for Clyde Bujari. Contains project, qualifications, resume info."
+	<meta name="description" content="Personal github.io page for Clyde Bujari. Contains project, qualifications, resume info.">
 	<meta name="author" content="Clyde Bujari">
+	<header>
+		<h1>Clyde's Personal Page</h1>
+		<h2>CPE Student</h2>
+		<nav>
+			<a class="" href="/">Home</a>
+			<a class="" href="/projects">Projects</a>
+			<a class="" href="/resume">Resume</a>
+		</nav>
+	</header>
 
-	<h1>Clyde Bujari's Personal Page</h1>
+
 
 	<h2>Projects</h2>
 	<h2>Links</h2>
