--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<a class="" href="/">Home</a>
 			<a class="" href="/projects">Projects</a>
 			<a class="" href="/resume">Resume</a>
+			<a class="" href="/contact">Contact</a>
 		</nav>
 	</header>
 
