--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
+	<title> Clyde Bujari | CPE Student </title>
+	<meta name="description" content="Personal github.io page for Clyde Bujari. Contains project, qualifications, resume info.">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-	<meta charset="UTF-8">
-	<meta name="description" content="Personal github.io page for Clyde Bujari. Contains project, qualifications, resume info.">
 	<meta name="author" content="Clyde Bujari">
 	<header>
 		<h1>Clyde's Personal Page</h1>
@@ -16,13 +18,6 @@
 			<a class="" href="/contact">Contact</a>
 		</nav>
 	</header>
-
-
-
-	<h2>Projects</h2>
-	<h2>Links</h2>
-	  <a href="https://c-bujari.github.io/resume.pdf">My Resume</a>
-		<a href="https://github.com/c-bujari">GitHub</a>
-		<a href="">LinkedIn</a>
-
+	<p> Main page </p>
 </body>
+</html>
