--- a/projects/index.html
+++ b/projects/index.html
@@ -18,6 +18,25 @@
 			<a class="" href="/contact">Contact</a>
 		</nav>
 	</header>
-
+	<div id="content">
+		<h2>Past/Current Projects</h2>
+		<ul class="project-list">
+			<li>
+				<h3 class="project-header">
+					<p>Line Following Robot</p>
+					<span class="project-date">Fall 2020</span>
+				</h3>
+				<p>Worked with a partner to design an autonomous robotic system. This robot used a Raspberry Pi to analyze video feed with Python and CV2, determining the best action to keep the robot moving along a defined track in real time.</p>
+				<a class="project-link" href="https://github.com/c-bujari/MBotFollower">GitHub Link</a>
+			</li>
+			<li>
+				<h3 class="project-header">
+					<p>Project 2</p>
+					<span class="project-date">Fall 2020</span>
+				</h3>
+				<p>Description goes here, blah blah blah</p>
+			</li>
+		</ul>
+	</div>
 </body>
 </html>
