Added github link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</nav>
 	</header>
 	<div id="content">
-		<p> Hello! This website is a bit of a work in progress, but its' main purpose is the <a href="/projects">projects</a> page, which lists out some of the work I've done on personal and school projects in a bit more readable format than on my GitHub (including older projects which don't lend themselves to a GitHub repository).</p>
+		<p> Hello! This website is a bit of a work in progress, but its' main purpose is the <a href="/projects">projects</a> page, which lists out some of the work I've done on personal and school projects in a bit more readable format than on my <a href="https://github.com/c-bujari/">GitHub profile</a> (including older projects which don't lend themselves to a GitHub repo).</p>
 	</div>
 </body>
 </html>
