--- a/resume/index.html
+++ b/resume/index.html
@@ -18,6 +18,9 @@
 			<a class="" href="/contact">Contact</a>
 		</nav>
 	</header>
-
+	<div id="content">
+		<iframe src="Resume_ClydeBujari_*.pdf" width="100%" height="500px">
+		</iframe>
+	</div>
 </body>
 </html>
