--- a/resume/index.html
+++ b/resume/index.html
@@ -19,7 +19,7 @@
 		</nav>
 	</header>
 	<div id="content">
-		<iframe src="Resume_ClydeBujari_*.pdf" width="100%" height="500px">
+		<iframe src="Resume_ClydeBujari_*" width="100%" height="500px">
 		</iframe>
 	</div>
 </body>
