--- a/resume/index.html
+++ b/resume/index.html
@@ -19,8 +19,8 @@
 		</nav>
 	</header>
 	<div id="content">
-		<iframe src="Resume_ClydeBujari_Jan2021.pdf" width="100%" height="500px">
-		</iframe>
+		<p> If the embed is not displaying or you would like a direct link to the pdf, click <a href="Resume_ClydeBujari_Jan2021.pdf">here</a>.</p>
+		<embed src="Resume_ClydeBujari_Jan2021.pdf" width="100%" height="100%" type="application/pdf">
 	</div>
 </body>
 </html>
