Added email address

--- a/contact/index.html
+++ b/contact/index.html
@@ -18,6 +18,8 @@
 			<a class="" href="/contact">Contact</a>
 		</nav>
 	</header>
-	<p> contact page </p>
+	<div id="content">
+		<p>Email: c.bujari@gmail.com</p>
+	</div>
 </body>
 </html>
