--- a/resume/index.html
+++ b/resume/index.html
@@ -20,7 +20,9 @@
 	</header>
 	<div id="content">
 		<p> If the embed is not displaying or you would like a direct link to the pdf, click <a href="Resume_ClydeBujari_Jan2021.pdf">here</a>.</p>
-		<embed src="Resume_ClydeBujari_Jan2021.pdf" width="100%" height="900px" type="application/pdf">
+		<div class="resumediv">
+		<embed src="Resume_ClydeBujari_Jan2021.pdf" width="100%" height="100%" type="application/pdf"></embed>
+		</div>
 	</div>
 </body>
 </html>
